--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,4 @@
-#pytest基本設定
 [pytest]
 log_cli = True
-addopts=-s #pytest 預設附加選項，即pytest命令後自動加上-s選項
+#log_cli_level = DEBUG
+addopts=-s --durations=50
