--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,4 +1,4 @@
-[pytest]
-log_cli = True
+[pytest]#pytest執行基本設定
+log_cli = True #顯示程式輸出
 #log_cli_level = DEBUG
-addopts=-s --durations=50
+addopts=-s --durations=50 #指令後例行附加選項
